build/log/idf_py_stderr_output_437898
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c:225:5: error: expected identifier or '(' before 'while'
  225 |     while (true) {
      |     ^~~~~
In file included from /home/keithuncouth/esp-idf-v5.3.2/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/keithuncouth/esp-idf-v5.3.2/components/esp_hw_support/include/esp_cpu.h:20,
                 from /home/keithuncouth/esp-idf-v5.3.2/components/esp_hw_support/include/spinlock.h:11,
                 from /home/keithuncouth/esp-idf-v5.3.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /home/keithuncouth/esp-idf-v5.3.2/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/keithuncouth/esp-idf-v5.3.2/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c:1:
/home/keithuncouth/esp-idf-v5.3.2/components/esp_common/include/esp_err.h:115:28: error: expected identifier or '(' before 'do'
  115 | #define ESP_ERROR_CHECK(x) do {                                         \
      |                            ^~
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c:306:5: note: in expansion of macro 'ESP_ERROR_CHECK'
  306 |     ESP_ERROR_CHECK(esp_task_wdt_delete(NULL));
      |     ^~~~~~~~~~~~~~~
/home/keithuncouth/esp-idf-v5.3.2/components/esp_common/include/esp_err.h:121:7: error: expected identifier or '(' before 'while'
  121 |     } while(0)
      |       ^~~~~
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c:306:5: note: in expansion of macro 'ESP_ERROR_CHECK'
  306 |     ESP_ERROR_CHECK(esp_task_wdt_delete(NULL));
      |     ^~~~~~~~~~~~~~~
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c:307:5: error: expected identifier or '(' before 'return'
  307 |     return res;
      |     ^~~~~~
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c:308:1: error: expected identifier or '(' before '}' token
  308 | }
      | ^
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c:330:13: warning: 'wait_for_ip' defined but not used [-Wunused-function]
  330 | static void wait_for_ip(void)
      |             ^~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5969: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
